--- a/shared/src/main/res/values-fr/strings.xml
+++ b/shared/src/main/res/values-fr/strings.xml
@@ -43,6 +43,7 @@
     <string name="menu_mobile_only">Mobile uniquement</string>
     <string name="menu_snooze">Couper les notifications</string>
     <string name="menu_call">Appeler le contact</string>
+    <string name="menu_video_call">Appel vidéo avec Duo</string>
     <string name="menu_view_contact">Voir le contact</string>
     <string name="menu_view_contacts">Voir les contacts</string>
     <string name="menu_view_media">Afficher les médias</string>
@@ -221,6 +222,7 @@ commencez !
         <item quantity="other">%1$d nouveaux messages</item>
     </plurals>
     <string name="read">Lu</string>
+    <string name="mark_as_read">Marquer comme Lu</string>
     <string name="mute">Sourdine</string>
     <string name="reply">Répondre</string>
     <string name="reply_to">Répondre à %1$s</string>
@@ -269,6 +271,7 @@ où vous n\'avez pas créé un canal de notification individuel pour la personna
     <string name="device_id">Identifiant du terminal</string>
     <string name="device_info">Informations du terminal</string>
     <string name="website">Site Internet</string>
+    <string name="view_platforms">Plateformes Pulse disponibles</string>
     <string name="access_messages_from_any_device">Accédez et envoyez des messages depuis n\'importe quel appareil !</string>
     <string name="beta_disclaimer">Ce projet est toujours en version bêta, veuillez signaler les problèmes que vous
 pourriez rencontrer !</string>
@@ -359,6 +362,8 @@ pourriez rencontrer !</string>
     <string name="adjustable_nav_bar_summary">Le thème clair utilise une barre de navigation blanche, tandis que le thème sombre utilise une barre de navigation noire</string>
     <string name="apply_theme_globally">Appliquer à toutes les conversations</string>
     <string name="apply_theme_globally_summary">Supprimer les thèmes par conversation, en faveur de ce jeu de couleurs global.</string>
+    <string name="apply_primary_theme_toolbar">Appliquer la couleur primaire à la barre supérieure de l\'application</string>
+    <string name="apply_primary_theme_toolbar_summary">Choisir de colorer ou non la barre supérieure</string>
     <string name="swipe_delete">Glisser pour effacer</string>
     <string name="swipe_actions">Actions par balayage</string>
     <string name="swipe_actions_summary">Personnaliser le balayage des conversations</string>
@@ -386,6 +391,14 @@ provenant de ce numéro ne seront plus sauvegardés et vous ne serez plus notifi
     <string name="delete_account_summary">Supprime le compte de cet appareil, de vos autres appareils connectés et du serveur. Cette opération est irréversible !</string>
     <string name="delete_account_confirmation">Êtes vous sur de vouloir supprimer ce compte et tout ce qui va avec ? Vous pourrez toujours vous réinscrire plus tard !</string>
     <string name="change_subscription">Changer d\'abonnement</string>
+    <string name="trial_subscription_title">Il vous reste %s jours d\'essai</string>
+    <string name="trial_subscription_summary">Appuyer ici pour vous abonner ou pour annuler la période d\'essai !</string>
+    <string name="upgrade_or_cancel_title">Vous avez suffisamment testé l\'application ?</string>
+    <string name="trial_expired">Merci d\'avoir essayé l\'application !</string>
+    <string name="upgrade_or_cancel">Vous pouvez mettre à niveau votre compte avec un abonnement renouvelable ou une adhésion à vie pour continuer de profiter de Pulse sur tous vos appareils ! \n\nVous souhaitez annuler ?
+Votre compte sera effacé et vous ne serez pas facturé. Vous pouvez continuer à utiliser l\'application sur votre smartphone gratuitement ! Revenez quand vous voulez !</string>
+    <string name="upgrade">Mettre à niveau !</string>
+    <string name="cancel_trial">Annuler l\'essai</string>
     <string name="cancel_on_the_play_store">Appuyer ici pour passer à l\'étape supérieure ! Vous pouvez annuler votre souscription dans le Play Store.</string>
     <string name="resync_account">Resynchroniser les messages</string>
     <string name="resync_account_summary">Des messages manquants ?
@@ -411,6 +424,7 @@ A utiliser pour synchroniser vos messages avec l’appareil principal.</string>
     <string name="after_four_messages">Après quatre messages</string>
     <string name="send_as_mms_summary">Envoyer les longs messages par MMS plutôt que par SMS individuels</string>
     <string name="alert_types">Types d\'alertes</string>
+    <string name="notification_customization">Personnalisation des notifications</string>
     <string name="alert_types_summary">Personnalisez la sonnerie, les vibrations et bien d\'autres choses</string>
     <string name="strip_unicode">Remplacer l\'Unicode</string>
     <string name="strip_unicode_summary">Ces caractères seront effacés des messages sortants.</string>
@@ -426,6 +440,8 @@ A utiliser pour synchroniser vos messages avec l’appareil principal.</string>
 Une fois cela fait, vous devrez vous connecter à nouveau, sur tous vos autres appareils. Voulez-vous continuer ?</string>
     <string name="show_conversation_history">Afficher l\'historique de la conversation</string>
     <string name="show_conversation_history_summary">Les notifications afficheront les précédents messages de la conversation</string>
+    <string name="dismiss_notifications_on_reply">Faire disparaître la notification après avoir répondu</string>
+    <string name="dismiss_notifications_on_reply_summary">Les notifications restent actives après avoir répondu, vous permettant de poursuivre une conversation dans les notifications</string>
     <string name="emoji_style">Styles d\'émoticônes</string>
     <string name="emoji_style_default">Système par défaut</string>
     <string name="emoji_style_android_o">Google Android Oréo</string>
@@ -453,15 +469,15 @@ Une fois cela fait, vous devrez vous connecter à nouveau, sur tous vos autres a
     <string name="signature_summary">Les signatures ne seront pas affichées dans la liste des messages, elles
 seront uniquement affichées au destinataire du message</string>
     <string name="cleanup_old_messages">Supprimer les anciens messages</string>
-    <string name="cleanup_old_messages_summary">Une fois par jour, les messages plus vieux sont supprimés,  selon l\'interval choisit.</string>
-    <string name="cleanup_old_messages_now_summary">Supprime maintenant les messages les plus vieux de cette conversation, selon l\'interval choisit.</string>
+    <string name="cleanup_old_messages_summary">Une fois par jour, les messages plus anciens que l\'intervalle choisi sont supprimés.</string>
+    <string name="cleanup_old_messages_now_summary">Supprime immédiatement, dans cette conversation, les messages plus anciens que l\'intervalle choisi.</string>
     <string name="delayed_sending">Envoi différé</string>
     <string name="delayed_sending_summary">Cela vous donne l\'opportunité d\'annuler ou modifier vos messages avant leur envoi</string>
     <string name="messaging_features">Fonctionnalités des messages</string>
     <string name="app_features">Fonctionnalités de l\'application</string>
     <string name="quick_compose">Notification de réponse rapide</string>
     <string name="quick_compose_notification">Afficher notification</string>
-    <string name="quick_compose_notification_summary">Les notifications permanentes vous donnes le moyen le plus rapide pour composer un message.</string>
+    <string name="quick_compose_notification_summary">Les notifications permanentes vous donnent le moyen le plus rapide pour composer un message.</string>
     <string name="quick_compose_favorites">Contacts favoris</string>
     <string name="quick_compose_favorites_summary">Ces contacts seront disponibles comme actions de notifications.</string>
     <string name="quick_compose_favorites_title">Sélectionner jusqu\'à 3 contacts :</string>
@@ -479,7 +495,7 @@ Avec votre compte, Pulse sauvegarde automatiquement tous les messages que vous e
     <string name="auto_reply_configuration">Configuration des réponses automatiques</string>
     <string name="auto_reply_configuration_summary">Paramétrez des réponses automatiques selon votre situation</string>
     <string name="auto_replies">Réponses automatiques</string>
-    <string name="auto_reply_top_pref_summary">Le mode Conduite et le mode Vacances sont prioritaires sur les autres mode de réponses automatiques. Si l\'un d\'entre eux est activé, aucune autre forme de réponse automatique ne sera envoyée.</string>
+    <string name="auto_reply_top_pref_summary">Le mode Conduite et le mode Vacances sont prioritaires sur les autres modes de réponses automatiques. Si l\'un d\'entre eux est activé, aucune autre forme de réponse automatique ne sera envoyée.</string>
     <string name="driving_mode">Mode Conduite</string>
     <string name="driving_mode_summary">Envoie les réponses automatiques à tous les messages que vous recevez.</string>
     <string name="vacation_mode">Mode Vacances</string>
@@ -559,12 +575,14 @@ Essayez aujourd\'hui !</string>
     <string name="channel_settings">Paramètres du canal de notification</string>
     <string name="channel_settings_summary">Avec Android Oréo, ce paramètre système vous permet de personnaliser la sonnerie, les vibrations, la LED de notification, et d\'autres choses encore, pour cette conversation.</string>
     <string name="restore_default_channel_settings">Restaurer les paramètres de notifications par défaut</string>
+    <string name="restore_default_channel_settings_popup">Les paramètres par défaut ont été restaurés.</string>
     <string name="channels">Canaux</string>
     <string name="default_channel">Canal par défaut</string>
     <string name="channels_global_warning">De nombreuses personnalisations sont désormais uniquement disponibles par canal.</string>
     <string name="channels_global_warning_2">Les <i>canaux de notifications</i> d\'Android sont maintenant requis pour la plupart des configurations.\n\n
 Vous pouvez personnaliser toutes les alertes de conversations individuelles en créant un <i>canal de notification</i> dans le menu de configuration de cette conversation.
 Utilisez le canal par défaut pour personnaliser les conversations auxquelles vous n\'avez pas créé un canal individuel.</string>
+    <string name="channels_global_warning_3">Avec Android Oreo, certaines des options ci-dessus vous redirigeront vers les paramètres des <i>canaux de notifications</i> d\'Android. Pour en savoir plus à propos de ces canaux, de la façon dont ils fonctionnent, et pourquoi ils doivent être utilisés, dirigez vous vers la page d\'aide de Pulse.</string>
     <string name="off">Inactif</string>
     <string name="on">Actif</string>
     <string name="share_promo">Hey, j\'utilise Pulse pour envoyer des messages ! Essaye le : https://play.google.com/store/apps/details?id=xyz.klinker.messenger</string>
@@ -596,9 +614,11 @@ Votre avis à 5 étoiles me fera le plus grand plaisir :)</string>
     <string name="cancelled_subscription_error">On dirait que vous avez annulé votre abonnement.
 Si vous ne renouvelez pas votre abonnement dans les 2 jours, l\'application vous déconnectera. S\'il s\'agit d\'une erreur, contactez-moi par email.</string>
     <string name="subscription_found">Abonnement trouvé - Ravi de vous revoir !</string>
+    <string name="trial_finished">Il semble que vous ayez fini votre période d\'essai gratuite, déjà.</string>
     <string name="subscription_not_found">Aucun abonnement trouvé, commencez votre essai !</string>
     <string name="checking_for_active_subscriptions">Recherche d\'un abonnement&#8230;</string>
     <string name="purchase_error_cancelled">Achat annulé :(</string>
+    <string name="purchase_cancelled_trial_finished">Votre période d\'essai est terminée et l\'achat a été annulé. Votre compte va être effacé pour l\'instant. \n\nN\'hésitez pas à créer à nouveau un compte, dès que vous souhaitez utiliser Pulse à travers plusieurs appareils !</string>
     <string name="purchase_error_bad_google_play">Uh oh, Google Play semble rencontrer quelques problèmes.</string>
     <string name="purchase_error_bad_sku">Hmm&#8230; Cet achat ne correspond pas à nos registres.</string>
     <string name="subscriptions">Les abonnements sont facturés après le septième jour d\'essai et peuvent être modifiés/annulés à tout moment :</string>
@@ -617,8 +637,15 @@ Je <b>ne peux pas</b> le faire automatiquement.</string>
     <string name="optimized_for_all_your_devices">Pulse est optimisé pour <b>tous</b> vos appareils.
 Envoyez des messages depuis internet, un ordinateur de bureau, votre tablette, et même votre TV.</string>
     <string name="true_imessage_competitor">Le premier <b>vrai</b> concurrent de iMessage pour Android.</string>
+    <string name="trial_description">Aucune concurrence ne peut atteindre le <b>support d\'un nombre illimité de plateforme</b> de Pulse associé à son <b>prix bas</b>. Vos messages sont synchronisés entre tous vos appareils, instantanément et en toute transparence.</string>
+    <string name="purchase_description">Essayez la version en ligne, pour <b>sept jours</b>, puis choisissez comment vous souhaitez supporter l\'application :\n\n<b>10.99€</b> pour une adhésion à vie\n<b>5.99€</b> par an\n<b>1.99€</b> par trimestre\n<b>0.99€</b> par mois</string>
+    <string name="start_free_trial">Commencer votre période d\'essai !</string>
+    <string name="create_your_pulse_account">Créer un compte Pulse !</string>
     <string name="try_it">Essayez-le maintenant!</string>
+    <string name="select_purchase">Sélectionner l\'achat</string>
     <string name="have_an_account">Déjà un compte ?\nSe connecter</string>
+    <string name="select_a_purchase">Sélectionner un achat</string>
+    <string name="select_a_purchase_description">Choisissez un des 3 abonnements, ou prenez l\'<b>adhésion à vie</b> pour faire un achat unique de l\'application.</string>
     <string name="seven_days_free">Gratuit pendant 7 jours !</string>
     <string name="competition_cant_beat">La concurrence ne peut rivaliser avec nos prix, notre vitesse ou notre service -
 <b>Prenez 7 jours</b> pour le constater par vous-même !</string>
@@ -631,5 +658,11 @@ Envoyez des messages depuis internet, un ordinateur de bureau, votre tablette, e
 Annulez à tout moment.</string>
     <string name="redirect_to_play_store">Merci pour cette souscription ! Pensez à annuler votre abonnement précédent depuis le <b>Play Store</b>. Pulse <b>ne peut pas</b> le faire automatiquement.</string>
     <string name="play_store">Play Store</string>
+    <string name="notification_trial_title">Envoyez vos SMS depuis n\'importe quel appareil - Essai</string>
+    <string name="notification_days_remaining_in_trial">Il reste %s jours d\'essai. Appuyez pour mettre à niveau !</string>
+    <string name="notification_last_day_of_trial">C\'est le dernier jour de votre période d\'essai. Appuyez pour mettre à niveau !</string>
+    <string name="notification_trial_expired">Votre essai de sept jours est arrivé à son terme. Appuyez pour mettre à niveau !</string>
+    <string name="continue_with_phone_app">Vous pouvez toujours utiliser l\'application sur votre téléphone, gratuitement !</string>
+    <string name="thanks_for_trying">Merci d\'avoir essayé l\'application !</string>
     <string name="quick_compose_summary">Notification permanente pour un accès rapide a la composition des messages.</string>
 </resources>
